package com.lld.interviewquestions.tictactoe.model;

public enum GameStatus {
    DRAW,
    WIN
}
