package com.lld.interviewquestions.tictactoe.model;

public enum PieceType {
    X,
    O
}
