package com.lld.interviewquestions.tictactoe.model;

public class PlayingPieceO extends PlayingPiece {

    public PlayingPieceO() {
        super(PieceType.O);
    }
}

