package com.lld.interviewquestions.tictactoe.model;

public class PlayingPieceX extends PlayingPiece {

    public PlayingPieceX() {
        super(PieceType.X);
    }
}

